--- a/manifest.json
+++ b/manifest.json
@@ -14,6 +14,7 @@
     }
   },
   "browser_action": {
+    "browser_style": true,
     "default_popup": "popup.html",
     "default_title": "Open multiple addresses",
     "theme_icons": [{
@@ -28,6 +29,7 @@
       }]
   },
   "permissions": [
+    "clipboardRead",
     "tabs"
   ]
 }
