Add command key to open popup

--- a/manifest.json
+++ b/manifest.json
@@ -31,5 +31,12 @@
   "permissions": [
     "clipboardRead",
     "tabs"
-  ]
+  ],
+  "commands": {
+    "_execute_browser_action": {
+      "suggested_key": {
+        "default": "Alt+T"
+      }
+    }
+  }
 }
